--- a/templates/index.html
+++ b/templates/index.html
@@ -6,11 +6,11 @@
             <div class="container px-4 px-lg-5 h-100">
                 <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-8 align-self-end">
-                        <h1 class="text-white font-weight-bold">Your Favorite Place for Free Bootstrap Themes</h1>
+                        <h1 class="text-white font-weight-bold">ยินดีต้อนรับ เข้าสู้เว็บ ของกลุ่ม TEAM NOOB</h1>
                         <hr class="divider" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 mb-5">Start Bootstrap can help you build better websites using the Bootstrap framework! Just download a theme and start customizing, no strings attached!</p>
+                        <p class="text-white-75 mb-5">สมาชิกกลุ่ม นาย สุพัน ชัยนอก นาย ธีรพงษ์ บุญเลี้ยง นาย สรรพสิทธิ์ ยาเคน นาย นพนันท์ เกษอินทร์</p>
                         <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
                     </div>
                 </div>
@@ -21,10 +21,38 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">We've got what you need!</h2>
-                        <hr class="divider divider-light" />
-                        <p class="text-white-75 mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! Choose one of our open source, free to download, and easy to use themes! No strings attached!</p>
-                        <a class="btn btn-light btn-xl" href="#services">Get Started!</a>
+                        <h2 class="text-white mt-0">สามารถ ติดต่อสอบถาม ได้ที่</h2>
+                    </div>
+                    <div class="row img-fluid justify-content-center align-items-center">
+                        <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+                          <div class="card card-hover card-wrapper img-fluid" style="width: 100%;">
+                            <img src="https://scontent.fbkk4-3.fna.fbcdn.net/v/t39.30808-6/458120373_1077741984065349_7238719294689512204_n.jpg?stp=dst-jpg_s206x206&_nc_cat=109&ccb=1-7&_nc_sid=7a06f5&_nc_eui2=AeGnbllrT_sHwzRl_nnSCqr4X7Jo3qWNwkVfsmjepY3CRRsOrZ1GXPxEOv0hC-YQmFXIwC2TN-2X65naGYdvBFTa&_nc_ohc=sScRchovLP8Q7kNvgGppxZB&_nc_zt=23&_nc_ht=scontent.fbkk4-3.fna&oh=00_AYAQ0S4-tI1hIlwLx2KLIN_Tkp2e0Hmn-0iyQunTR8vJ1w&oe=66DB8043" class="card-img" alt="toon-img" />
+                            <div class="card-body">
+                              <h5 class="card-title">Template-System</h5>
+                              <p class="card-text">นาย สุพัน ชัยนอก</p>
+                              <a href="https://web.facebook.com/hoy.sehay" class="btn btn-primary">ติดต่อ</a>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+                          <div class="card card-hover card-wrapper img-fluid" style="width: 100%;">
+                            <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/457295467_517284730663220_4142696290310827057_n.jpg?stp=dst-jpg_s206x206&_nc_cat=106&ccb=1-7&_nc_sid=0024fc&_nc_eui2=AeHuvb2hG73O0sJNgb3RQiRq7wYh7GoH-FDvBiHsagf4UEaYs4G_3_4oz-3Pot54w21sv7IH9dK_65tCrokskXyf&_nc_ohc=pwfookKOUscQ7kNvgGEuyN3&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_Q7cD1QH6yCvw9-A42Odj40GZqSO5tHj7oU_HndSYkRxUVgDK6w&oe=66FD228Ehttps://scontent.xx.fbcdn.net/v/t1.15752-9/457295467_517284730663220_4142696290310827057_n.jpg?stp=dst-jpg_s206x206&_nc_cat=106&ccb=1-7&_nc_sid=0024fc&_nc_eui2=AeHuvb2hG73O0sJNgb3RQiRq7wYh7GoH-FDvBiHsagf4UEaYs4G_3_4oz-3Pot54w21sv7IH9dK_65tCrokskXyf&_nc_ohc=pwfookKOUscQ7kNvgGEuyN3&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_Q7cD1QH6yCvw9-A42Odj40GZqSO5tHj7oU_HndSYkRxUVgDK6w&oe=66FD228E" class="card-img" alt="Au-img" />
+                            <div class="card-body">
+                              <h5 class="card-title">Login</h5>
+                              <p class="card-text">นาย ธีรพงษ์ บุญเลี้ยง</p>
+                              <a href="https://web.facebook.com/profile.php?id=100026984538546" class="btn btn-primary">ติดต่อ</a>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+                          <div class="card card-hover card-wrapper" style="width: 100%;">
+                            <img src="https://scontent.fbkk4-3.fna.fbcdn.net/v/t39.30808-1/457298844_1885983108567327_9028981212686523614_n.jpg?stp=dst-jpg_s200x200&_nc_cat=106&ccb=1-7&_nc_sid=0ecb9b&_nc_eui2=AeFz8mVIKbaxFyWuHPhjHJSbi-LxSl8t6xmL4vFKXy3rGURX1f1vHLAUEB6DU0qk1kf-ZciDU6SN7AgBkd9W1VeO&_nc_ohc=TZa6ROEQASEQ7kNvgFk30rQ&_nc_ht=scontent.fbkk4-3.fna&oh=00_AYCJ109bTYivbZy1546DAjkGdoM5g4iY2JVDYKt2JGNbig&oe=66DB8B8C" class="card-img" alt="non-img" />
+                            <div class="card-body">
+                              <h5 class="card-title">regisster</h5>
+                              <p class="card-text">นายสรรพสิทธิ์ ยาเคน</p>
+                              <a href="https://www.facebook.com/100016018896948" class="btn btn-primary">ติดต่อ</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
