--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
                             <div class="card-body">
                               <h5 class="card-title">regisster</h5>
                               <p class="card-text">นายสรรพสิทธิ์ ยาเคน</p>
-                              <a href="https://www.facebook.com/100016018896948" class="btn btn-primary">ติดต่อ</a>
+                              <a href="https://web.facebook.com/profile.php?id=100014669678687" class="btn btn-primary">ติดต่อ</a>
                             </div>
                         </div>
                     </div>
