--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
                     </div>
                     <div class="col-lg-8 align-self-baseline">
                         <p class="text-white-75 mb-5">สมาชิกกลุ่ม นาย สุพัน ชัยนอก นาย ธีรพงษ์ บุญเลี้ยง นาย สรรพสิทธิ์ ยาเคน นาย นพนันท์ เกษอินทร์</p>
-                        <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
+                        <a class="btn btn-primary btn-xl" href="login/">login</a>
                     </div>
                 </div>
             </div>
