--- a/statics/css/styles.css
+++ b/statics/css/styles.css
@@ -10935,6 +10935,15 @@ header.masthead {
   background-attachment: scroll;
   background-size: cover;
 }
+header.comsci {
+  padding-top: 10rem;
+  padding-bottom: calc(10rem - 4.5rem);
+  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("../assets/img/bg-comsci.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-size: cover;
+}
 header.masthead h1, header.masthead .h1 {
   font-size: 2.25rem;
 }
