--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
             </div>
         </header>
         <!-- About-->
-        <header class="masthead">
+        <header class="comsci">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 text-center">
