--- a/templates/map.html
+++ b/templates/map.html
@@ -3,14 +3,26 @@
 
 <head>
     <h1>สาขาวิทยาการคอมพิวเตอร์</h1>
-</head>
+    <style>
+        
+        p {
+            text-align: left; /* ชิดซ้าย */
+            padding-left: 20px; /* เพิ่มระยะห่างด้านซ้าย 20px */
+        }
 
-<body>
+        p {
+            font-size: 24px; /* กำหนดขนาดตัวอักษรเป็น 24 พิกเซล */
+        }
+
+    </style>
+
     <!-- แผนที่ -->
     <h2>เส้นทางไปมหาลัยราชภัฏศรีสะเกษ</h2>
-    <p>ตึกที่ใช่ในการเรียน</p>
-
     <img width="1000" src="https://www.sskru.ac.th/wp-content/uploads/2023/01/SSKRU-Office.jpg">
-</body>
+    <p>ตึกคณะศิลปศาสตร์และวิทยาศาสตร์ เป็นตึกคณะของสาขาวิทยาศาสตร์</p>
+    
+    <a href="https://www.google.com/maps/place/%E0%B8%A1%E0%B8%AB%E0%B8%B2%E0%B8%A7%E0%B8%B4%E0%B8%97%E0%B8%A2%E0%B8%B2%E0%B8%A5%E0%B8%B1%E0%B8%A2%E0%B8%A3%E0%B8%B2%E0%B8%8A%E0%B8%A0%E0%B8%B1%E0%B8%8E%E0%B8%A8%E0%B8%A3%E0%B8%B5%E0%B8%AA%E0%B8%B0%E0%B9%80%E0%B8%81%E0%B8%A9/@15.1163785,104.3595923,16z/data=!4m15!1m8!3m7!1s0x3116e347666463c3:0xc6a986d7ba1e6f95!2z4Lih4Lir4Liy4Lin4Li04LiX4Lii4Liy4Lil4Lix4Lii4Lij4Liy4LiK4Lig4Lix4LiO4Lio4Lij4Li14Liq4Liw4LmA4LiB4Lip!8m2!3d15.1163785!4d104.3595923!10e5!16s%2Fg%2F11c74dlv3q!3m5!1s0x3116e347666463c3:0xc6a986d7ba1e6f95!8m2!3d15.1163785!4d104.3595923!16s%2Fg%2F11c74dlv3q?entry=ttu&g_ep=EgoyMDI0MDkwNC4wIKXMDSoASAFQAw%3D%3D">คลิกเพื่อนำทาง</a>
+
+</head>
 
 {% endblock content %}
