--- a/statics/css/styles.css
+++ b/statics/css/styles.css
@@ -10953,10 +10953,10 @@ header.hee4 {
   background-attachment: scroll;
   background-size: cover;
 }
-header.mapping {
+header.map {
   padding-top: 10rem;
   padding-bottom: calc(10rem - 4.5rem);
-  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("../assets/img/bg-mapping.jpg");
+  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("../assets/img/bg-map.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
