--- a/templates/base.html
+++ b/templates/base.html
@@ -28,10 +28,10 @@
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto my-2 my-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://www.sskru.ac.th/student2568/">สมัครเรียนออนไลน์</a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://www.google.com/maps/place/%E0%B8%A1%E0%B8%AB%E0%B8%B2%E0%B8%A7%E0%B8%B4%E0%B8%97%E0%B8%A2%E0%B8%B2%E0%B8%A5%E0%B8%B1%E0%B8%A2%E0%B8%A3%E0%B8%B2%E0%B8%8A%E0%B8%A0%E0%B8%B1%E0%B8%8E%E0%B8%A8%E0%B8%A3%E0%B8%B5%E0%B8%AA%E0%B8%B0%E0%B9%80%E0%B8%81%E0%B8%A9/@15.1163837,104.3570174,17z/data=!3m1!4b1!4m6!3m5!1s0x3116e347666463c3:0xc6a986d7ba1e6f95!8m2!3d15.1163785!4d104.3595923!16s%2Fg%2F11c74dlv3q?entry=ttu&g_ep=EgoyMDI0MDkwNC4wIKXMDSoASAFQAw%3D%3D">แผนที่</a></li>
+                        <li class="nav-item"><a class="nav-link" href="comsi">ติดต่อ</a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/comsci.sskru">เพจวิทยาการคอมพิวเตอร์</a></li>
                     </ul>
                 </div>
             </div>
