--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,21 @@
 {% extends "base.html" %}
 
 {% block content %}
+<html lang="th">
+<head>
+    <meta charset="UTF-8">
         <!-- Masthead-->
         <header class="masthead">
             <div class="container px-4 px-lg-5 h-100">
                 <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-8 align-self-end">
                         <h1 class="text-white font-weight-bold">สาขาวิทยาการคอมพิวเตอร์</h1>
-                        <h3 class="text-white font-weight-bold">ขณะศิลปศาสตร์และวิทยาศาสตร์</h3>
+                        <h3 class="text-white font-weight-bold">คณะศิลปศาสตร์และวิทยาศาสตร์</h3>
                         <h3 class="text-white font-weight-bold">มหาวิทยาลัยราชภัฏศรีสะเกษ</h3>
                         <hr class="divider" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <a class="btn btn-primary btn-xl" href="login/">login</a>
+                        <a class="btn btn-primary btn-xl" href="continue/">continue</a>
                     </div>
                 </div>
             </div>
@@ -27,7 +30,7 @@
                     <div class="row img-fluid justify-content-center align-items-center">
                         <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
                           <div class="card card-hover card-wrapper img-fluid" style="width: 100%;">
-                            <img src="https://scontent.fbkk4-3.fna.fbcdn.net/v/t39.30808-6/458120373_1077741984065349_7238719294689512204_n.jpg?stp=dst-jpg_s206x206&_nc_cat=109&ccb=1-7&_nc_sid=7a06f5&_nc_eui2=AeGnbllrT_sHwzRl_nnSCqr4X7Jo3qWNwkVfsmjepY3CRRsOrZ1GXPxEOv0hC-YQmFXIwC2TN-2X65naGYdvBFTa&_nc_ohc=sScRchovLP8Q7kNvgGppxZB&_nc_zt=23&_nc_ht=scontent.fbkk4-3.fna&oh=00_AYAQ0S4-tI1hIlwLx2KLIN_Tkp2e0Hmn-0iyQunTR8vJ1w&oe=66DB8043" class="card-img" alt="toon-img" />
+                            <img src="https://scontent.fubp1-1.fna.fbcdn.net/v/t39.30808-6/458120373_1077741984065349_7238719294689512204_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeGBu5T-1t3K62FwSduiiOnaX7Jo3qWNwkVfsmjepY3CRfMlUSb-FQVOMv0Fz56OXvIFhqSQGY1d79GMOEdjNSsW&_nc_ohc=garH28UTzesQ7kNvgGDhp8Y&_nc_ht=scontent.fubp1-1.fna&_nc_gid=ACPPvAfRc8-ecVeHwDqYiaC&oh=00_AYCFB1zsdVzjIV1_kIR09t9-PgFfYvmAcfYx9fdcL_9-hA&oe=66E33103" class="card-img" alt="toon-img" />
                             <div class="card-body">
                               <h5 class="card-title">Template-System</h5>
                               <p class="card-text">นาย สุพัน ชัยนอก</p>
@@ -47,7 +50,7 @@
                         </div>
                         <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
                           <div class="card card-hover card-wrapper" style="width: 100%;">
-                            <img src="https://scontent.fbkk4-3.fna.fbcdn.net/v/t39.30808-1/457298844_1885983108567327_9028981212686523614_n.jpg?stp=dst-jpg_s200x200&_nc_cat=106&ccb=1-7&_nc_sid=0ecb9b&_nc_eui2=AeFz8mVIKbaxFyWuHPhjHJSbi-LxSl8t6xmL4vFKXy3rGURX1f1vHLAUEB6DU0qk1kf-ZciDU6SN7AgBkd9W1VeO&_nc_ohc=TZa6ROEQASEQ7kNvgFk30rQ&_nc_ht=scontent.fbkk4-3.fna&oh=00_AYCJ109bTYivbZy1546DAjkGdoM5g4iY2JVDYKt2JGNbig&oe=66DB8B8C" class="card-img" alt="non-img" />
+                            <img src="https://scontent.fubp1-1.fna.fbcdn.net/v/t39.30808-1/457298844_1885983108567327_9028981212686523614_n.jpg?stp=dst-jpg_s200x200&_nc_cat=106&ccb=1-7&_nc_sid=0ecb9b&_nc_eui2=AeHqBM08Ziz7uXxeYWRrjhVSi-LxSl8t6xmL4vFKXy3rGeZze7DY7hqY51np4_7o_iIIZyWCu9hxCNo3C0n-7pVZ&_nc_ohc=xsocMjOEVbEQ7kNvgF-Spul&_nc_ht=scontent.fubp1-1.fna&oh=00_AYAg96Ph3E56IeXvefO-PZj8z4ZZ3TneSbES0mkND_vveA&oe=66E33C4C" class="card-img" alt="non-img" />
                             <div class="card-body">
                               <h5 class="card-title">regisster</h5>
                               <p class="card-text">นายสรรพสิทธิ์ ยาเคน</p>
@@ -58,186 +61,8 @@
                 </div>
             </div>
         </header>
-        <!-- Services-->
-        <section class="page-section" id="services">
-            <div class="container px-4 px-lg-5">
-                <h2 class="text-center mt-0">At Your Service</h2>
-                <hr class="divider" />
-                <div class="row gx-4 gx-lg-5">
-                    <div class="col-lg-3 col-md-6 text-center">
-                        <div class="mt-5">
-                            <div class="mb-2"><i class="bi-gem fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Sturdy Themes</h3>
-                            <p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 text-center">
-                        <div class="mt-5">
-                            <div class="mb-2"><i class="bi-laptop fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Up to Date</h3>
-                            <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 text-center">
-                        <div class="mt-5">
-                            <div class="mb-2"><i class="bi-globe fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Ready to Publish</h3>
-                            <p class="text-muted mb-0">You can use this design as is, or you can make changes!</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 text-center">
-                        <div class="mt-5">
-                            <div class="mb-2"><i class="bi-heart fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Made with Love</h3>
-                            <p class="text-muted mb-0">Is it really open source if it's not made with love?</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- Portfolio-->
-        <div id="portfolio">
-            <div class="container-fluid p-0">
-                <div class="row g-0">
-                    <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg" title="Project Name">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="..." />
-                            <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.jpg" title="Project Name">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="..." />
-                            <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg" title="Project Name">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="..." />
-                            <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/4.jpg" title="Project Name">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/4.jpg" alt="..." />
-                            <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg" title="Project Name">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/5.jpg" alt="..." />
-                            <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg" title="Project Name">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="..." />
-                            <div class="portfolio-box-caption p-3">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Call to action-->
-        <section class="page-section bg-dark text-white">
-            <div class="container px-4 px-lg-5 text-center">
-                <h2 class="mb-4">Free Download at Start Bootstrap!</h2>
-                <a class="btn btn-light btn-xl" href="https://startbootstrap.com/theme/creative/">Download Now!</a>
-            </div>
-        </section>
-        <!-- Contact-->
-        <section class="page-section" id="contact">
-            <div class="container px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-5 justify-content-center">
-                    <div class="col-lg-8 col-xl-6 text-center">
-                        <h2 class="mt-0">Let's Get In Touch!</h2>
-                        <hr class="divider" />
-                        <p class="text-muted mb-5">Ready to start your next project with us? Send us a messages and we will get back to you as soon as possible!</p>
-                    </div>
-                </div>
-                <div class="row gx-4 gx-lg-5 justify-content-center mb-5">
-                    <div class="col-lg-6">
-                        <!-- * * * * * * * * * * * * * * *-->
-                        <!-- * * SB Forms Contact Form * *-->
-                        <!-- * * * * * * * * * * * * * * *-->
-                        <!-- This form is pre-integrated with SB Forms.-->
-                        <!-- To make this form functional, sign up at-->
-                        <!-- https://startbootstrap.com/solution/contact-forms-->
-                        <!-- to get an API token!-->
-                        <form id="contactForm" data-sb-form-api-token="API_TOKEN">
-                            <!-- Name input-->
-                            <div class="form-floating mb-3">
-                                <input class="form-control" id="name" type="text" placeholder="Enter your name..." data-sb-validations="required" />
-                                <label for="name">Full name</label>
-                                <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
-                            </div>
-                            <!-- Email address input-->
-                            <div class="form-floating mb-3">
-                                <input class="form-control" id="email" type="email" placeholder="name@example.com" data-sb-validations="required,email" />
-                                <label for="email">Email address</label>
-                                <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
-                                <div class="invalid-feedback" data-sb-feedback="email:email">Email is not valid.</div>
-                            </div>
-                            <!-- Phone number input-->
-                            <div class="form-floating mb-3">
-                                <input class="form-control" id="phone" type="tel" placeholder="(123) 456-7890" data-sb-validations="required" />
-                                <label for="phone">Phone number</label>
-                                <div class="invalid-feedback" data-sb-feedback="phone:required">A phone number is required.</div>
-                            </div>
-                            <!-- Message input-->
-                            <div class="form-floating mb-3">
-                                <textarea class="form-control" id="message" type="text" placeholder="Enter your message here..." style="height: 10rem" data-sb-validations="required"></textarea>
-                                <label for="message">Message</label>
-                                <div class="invalid-feedback" data-sb-feedback="message:required">A message is required.</div>
-                            </div>
-                            <!-- Submit success message-->
-                            <!---->
-                            <!-- This is what your users will see when the form-->
-                            <!-- has successfully submitted-->
-                            <div class="d-none" id="submitSuccessMessage">
-                                <div class="text-center mb-3">
-                                    <div class="fw-bolder">Form submission successful!</div>
-                                    To activate this form, sign up at
-                                    <br />
-                                    <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
-                                </div>
-                            </div>
-                            <!-- Submit error message-->
-                            <!---->
-                            <!-- This is what your users will see when there is-->
-                            <!-- an error submitting the form-->
-                            <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
-                            <!-- Submit Button-->
-                            <div class="d-grid"><button class="btn btn-primary btn-xl disabled" id="submitButton" type="submit">Submit</button></div>
-                        </form>
-                    </div>
-                </div>
-                <div class="row gx-4 gx-lg-5 justify-content-center">
-                    <div class="col-lg-4 text-center mb-5 mb-lg-0">
-                        <i class="bi-phone fs-2 mb-3 text-muted"></i>
-                        <div>+1 (555) 123-4567</div>
-                    </div>
-                </div>
-            </div>
-        </section>
+        
+               
         {% endblock content %}
         <!-- Masthead-->
         <header class="masthead">
@@ -447,4 +272,86 @@
                 </div>
             </div>
         </section>
+        
+        <!DOCTYPE html>
+<html lang="th">
+<head>
+    
+    
+<meta charset="UTF-8">
+    
+ 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    
+   
+<title>หน้าแรก</title>
+    <style>
+        @
+
+        @keyframes marquee {
+            0% {
+                transform: translateX(100%);
+            }
+            100% {
+                transform: translateX(-100%);
+            }
+        }
+
+        .no-scroll {
+            white-space: nowrap;
+            overflow: hidden;
+            display: inline-block;
+            animation: marquee 10s linear infinite;
+        }
+    </style>
+</head>
+<body>
+    
+    
+    <html lang="th">
+        <head>
+            <meta charset="UTF-8">
+            
+            
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            
+           
+        <link rel="stylesheet" href="styles.css">
+            <title>หน้าแรก</title>
+        
+    
+        </head>
+        <!DOCTYPE html>
+        <html lang="en">
+        <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>Document</title>
+            <style>
+                body {
+                    display: flex;
+                    justify-content: center; /* จัดแนวกลางแนวนอน */
+                    align-items: center; /* จัดแนวกลางแนวตั้ง */
+                    height: 100vh; /* ครอบคลุมความสูงของหน้าจอ */
+                    margin: 0; /* ลบ margin ของ body */
+                    background-color: #333; /* สีพื้นหลังเพื่อความชัดเจน */
+                }
+                
+                h1.text-white.font-weight-bold {
+                    color: white; /* สีตัวอักษร */
+                    font-weight: bold; /* ตัวหนา */
+                    text-align: center; /* จัดแนวกลางในแนวนอน */
+                    white-space: nowrap; /* ป้องกันการตัดบรรทัดอัตโนมัติ */
+                }
+            </style>
+        </head>
+        <body>
+            <h1 class="text-white font-weight-bold">สาขาวิทยาการคอมพิวเตอร์</h1>
+        </body>
+        </html>
+        
+
+
+
         
