--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
                 <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-8 align-self-end">
                         <h1 class="text-white font-weight-bold">สาขาวิทยาการคอมพิวเตอร์</h1>
-                        <h3 class="text-white font-weight-bold">ขณะศิลปศาสตร์และวิทยาศาสตร์</h3>
+                        <h3 class="text-white font-weight-bold">คณะศิลปศาสตร์และวิทยาศาสตร์</h3>
                         <h3 class="text-white font-weight-bold">มหาวิทยาลัยราชภัฏศรีสะเกษ</h3>
                         <hr class="divider" />
                     </div>
@@ -27,31 +27,31 @@
                     <div class="row img-fluid justify-content-center align-items-center">
                         <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
                           <div class="card card-hover card-wrapper img-fluid" style="width: 100%;">
-                            <img src="https://scontent.fbkk4-3.fna.fbcdn.net/v/t39.30808-6/458120373_1077741984065349_7238719294689512204_n.jpg?stp=dst-jpg_s206x206&_nc_cat=109&ccb=1-7&_nc_sid=7a06f5&_nc_eui2=AeGnbllrT_sHwzRl_nnSCqr4X7Jo3qWNwkVfsmjepY3CRRsOrZ1GXPxEOv0hC-YQmFXIwC2TN-2X65naGYdvBFTa&_nc_ohc=sScRchovLP8Q7kNvgGppxZB&_nc_zt=23&_nc_ht=scontent.fbkk4-3.fna&oh=00_AYAQ0S4-tI1hIlwLx2KLIN_Tkp2e0Hmn-0iyQunTR8vJ1w&oe=66DB8043" class="card-img" alt="toon-img" />
+                            <img src="https://scontent-bkk1-1.xx.fbcdn.net/v/t39.30808-1/437919256_1675460332986793_5255205882908459384_n.jpg?stp=dst-jpg_s200x200&_nc_cat=103&ccb=1-7&_nc_sid=0ecb9b&_nc_ohc=bADNzfuLYNgQ7kNvgGbs47_&_nc_ht=scontent-bkk1-1.xx&oh=00_AYAp7A8oTmEqdHTH6jKMDBnUms1mqkysejNnsuSi4lFOfQ&oe=66E5AD32" class="card-img" alt="toon-img" />
                             <div class="card-body">
                               <h5 class="card-title">Template-System</h5>
-                              <p class="card-text">นาย สุพัน ชัยนอก</p>
-                              <a href="https://web.facebook.com/hoy.sehay" class="btn btn-primary">ติดต่อ</a>
+                              <p class="card-text">นาย กิตตินันท์ สองศร</p>
+                              <a href="https://www.facebook.com/kitttinan69/?_rdr" class="btn btn-primary">ติดต่อ</a>
                             </div>
                           </div>
                         </div>
                         <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
                           <div class="card card-hover card-wrapper img-fluid" style="width: 100%;">
-                            <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/457295467_517284730663220_4142696290310827057_n.jpg?stp=dst-jpg_s206x206&_nc_cat=106&ccb=1-7&_nc_sid=0024fc&_nc_eui2=AeHuvb2hG73O0sJNgb3RQiRq7wYh7GoH-FDvBiHsagf4UEaYs4G_3_4oz-3Pot54w21sv7IH9dK_65tCrokskXyf&_nc_ohc=pwfookKOUscQ7kNvgGEuyN3&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_Q7cD1QH6yCvw9-A42Odj40GZqSO5tHj7oU_HndSYkRxUVgDK6w&oe=66FD228Ehttps://scontent.xx.fbcdn.net/v/t1.15752-9/457295467_517284730663220_4142696290310827057_n.jpg?stp=dst-jpg_s206x206&_nc_cat=106&ccb=1-7&_nc_sid=0024fc&_nc_eui2=AeHuvb2hG73O0sJNgb3RQiRq7wYh7GoH-FDvBiHsagf4UEaYs4G_3_4oz-3Pot54w21sv7IH9dK_65tCrokskXyf&_nc_ohc=pwfookKOUscQ7kNvgGEuyN3&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_Q7cD1QH6yCvw9-A42Odj40GZqSO5tHj7oU_HndSYkRxUVgDK6w&oe=66FD228E" class="card-img" alt="Au-img" />
+                            <img src="https://scontent-bkk1-1.xx.fbcdn.net/v/t39.30808-1/355832638_1069276057381206_5974858283078702368_n.jpg?stp=dst-jpg_s200x200&_nc_cat=100&ccb=1-7&_nc_sid=0ecb9b&_nc_ohc=8Pix-casRY0Q7kNvgGd6P-q&_nc_ht=scontent-bkk1-1.xx&_nc_gid=A-6sYG509c5neFEKtRWK_JQ&oh=00_AYB1szFXAFCSSr8TrfOyUWEa6ZdJfyXBzAaliLUsj94Rqg&oe=66E59606" class="card-img" alt="Au-img" />
                             <div class="card-body">
                               <h5 class="card-title">Login</h5>
-                              <p class="card-text">นาย ธีรพงษ์ บุญเลี้ยง</p>
-                              <a href="https://web.facebook.com/profile.php?id=100026984538546" class="btn btn-primary">ติดต่อ</a>
+                              <p class="card-text">นาย อัครพล มนทาทิพย์</p>
+                              <a href="https://www.facebook.com/people/Akarapol-Montathip/pfbid02eFNyx877eSSL1QaTkBDdPhoXdEKHiWDvbR8H3QiCR3iJpa9VFUbujsBxHWCcB3xBl/?comment_id=Y29tbWVudDoxOTQ3ODk3ODE5NTc4NzdfMTk0ODE4OTAxOTU0OTY1" class="btn btn-primary">ติดต่อ</a>
                             </div>
                           </div>
                         </div>
                         <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
                           <div class="card card-hover card-wrapper" style="width: 100%;">
-                            <img src="https://scontent.fbkk4-3.fna.fbcdn.net/v/t39.30808-1/457298844_1885983108567327_9028981212686523614_n.jpg?stp=dst-jpg_s200x200&_nc_cat=106&ccb=1-7&_nc_sid=0ecb9b&_nc_eui2=AeFz8mVIKbaxFyWuHPhjHJSbi-LxSl8t6xmL4vFKXy3rGURX1f1vHLAUEB6DU0qk1kf-ZciDU6SN7AgBkd9W1VeO&_nc_ohc=TZa6ROEQASEQ7kNvgFk30rQ&_nc_ht=scontent.fbkk4-3.fna&oh=00_AYCJ109bTYivbZy1546DAjkGdoM5g4iY2JVDYKt2JGNbig&oe=66DB8B8C" class="card-img" alt="non-img" />
+                            <img src="https://scontent-bkk1-1.xx.fbcdn.net/v/t1.30497-1/453178253_471506465671661_2781666950760530985_n.png?stp=dst-png_s200x200&_nc_cat=1&ccb=1-7&_nc_sid=136b72&_nc_ohc=rNanvdXoqvgQ7kNvgG1k27J&_nc_ht=scontent-bkk1-1.xx&_nc_gid=A-Lff6MoOh6vVSbGc5kcboD&oh=00_AYAd_80L5iZenqnpfyU1NX5-AC5YEYnlvbnxvhx2tw1ZUw&oe=67075DFA" class="card-img" alt="non-img" />
                             <div class="card-body">
                               <h5 class="card-title">regisster</h5>
-                              <p class="card-text">นายสรรพสิทธิ์ ยาเคน</p>
-                              <a href="https://web.facebook.com/profile.php?id=100014669678687" class="btn btn-primary">ติดต่อ</a>
+                              <p class="card-text">นาย ธนบดี ผ่านพินิจ</p>
+                              <a href="https://www.facebook.com/p/%E0%B8%98%E0%B8%99%E0%B8%9A%E0%B8%94%E0%B8%B5-%E0%B8%9C%E0%B9%88%E0%B8%B2%E0%B8%99%E0%B8%9E%E0%B8%B4%E0%B8%99%E0%B8%B4%E0%B8%88-100011747434107/?locale=th_TH" class="btn btn-primary">ติดต่อ</a>
                             </div>
                         </div>
                     </div>
