--- a/statics/css/styles.css
+++ b/statics/css/styles.css
@@ -10953,6 +10953,15 @@ header.hee4 {
   background-attachment: scroll;
   background-size: cover;
 }
+header.gun {
+  padding-top: 10rem;
+  padding-bottom: calc(10rem - 4.5rem);
+  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("../assets/img/bg-hee4.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-size: cover;
+}
 header.masthead h1, header.masthead .h1 {
   font-size: 2.25rem;
 }
